made the description scrollable whenever it becomes way too long to maintain the design of task card

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -42,4 +42,8 @@ code {
   padding-right: 0 !important;
 }
 
-/*date picker design*/
+/*scrollable description*/
+#cardDescription {
+  height: 200px;
+  overflow-y: scroll;
+}
