--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -47,3 +47,9 @@ code {
   height: 200px;
   overflow-y: scroll;
 }
+
+.section {
+  /* background-color: aqua; */
+  padding-top: 130px;
+  padding-bottom: 100px;
+}
