--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -53,3 +53,18 @@ code {
   padding-top: 130px;
   padding-bottom: 100px;
 }
+
+.flexItem {
+  padding-left: 20px;
+}
+
+/*toggler icon color*/
+/* Custom CSS */
+.navbar-toggler .btn-secondary {
+  display: block;
+  width: 20px;
+  height: 2px;
+  background-color: #6c757d;
+  /* Change to desired color */
+  margin-bottom: 3px;
+}
