footer of the website

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -68,3 +68,9 @@ code {
   /* Change to desired color */
   margin-bottom: 3px;
 }
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
