--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -78,6 +78,31 @@ code {
     text-shadow: 0 0 10px #fff, 0 0 30px #ff4da6, 0 0 40px #b84dff, 0 0 50px #c74dff, 0 0 60px #7c4dff, 0 0 70px #8b4dff, 0 0 80px #be4dff;
   }
 }
-.nav-link:hover {
-  color: rgb(34, 88, 236)
+.navbar-nav .nav-link {
+  text-decoration: none;
+  position: relative;
+  transition: color 0.2s ease;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #0056b3;
+  text-decoration: underline;
+}
+
+.navbar-nav .nav-link:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0056b3;
+  visibility: hidden;
+  transform: translateY(5px);
+  transition: all 0.2s ease;
+}
+
+.navbar-nav .nav-link:hover:before {
+  visibility: visible;
+  transform: translateY(0);
 }
