--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -47,7 +47,13 @@ code {
   height: 200px;
   overflow-y: scroll;
 }
-
+/*scrollable description*/
+#cardSubject {
+  height: 50px;
+  /* overflow-y: scroll; */
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .section {
   /* background-color: aqua; */
   padding-top: 130px;
@@ -71,11 +77,25 @@ code {
 
 @keyframes glow {
   from {
-    text-shadow: 0 0 6px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e600c0, 0 0 50px #e600d3, 0 0 60px #cb00e6, 0 0 70px #e60073;
+    text-shadow:
+      0 0 6px #fff,
+      0 0 20px #fff,
+      0 0 30px #e60073,
+      0 0 40px #e600c0,
+      0 0 50px #e600d3,
+      0 0 60px #cb00e6,
+      0 0 70px #e60073;
   }
 
   to {
-    text-shadow: 0 0 10px #fff, 0 0 30px #ff4da6, 0 0 40px #b84dff, 0 0 50px #c74dff, 0 0 60px #7c4dff, 0 0 70px #8b4dff, 0 0 80px #be4dff;
+    text-shadow:
+      0 0 10px #fff,
+      0 0 30px #ff4da6,
+      0 0 40px #b84dff,
+      0 0 50px #c74dff,
+      0 0 60px #7c4dff,
+      0 0 70px #8b4dff,
+      0 0 80px #be4dff;
   }
 }
 .navbar-nav .nav-link {
@@ -90,7 +110,7 @@ code {
 }
 
 .navbar-nav .nav-link:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 2px;
