--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -72,6 +72,8 @@ code {
   /* background-color: aqua; */
   padding-top: 130px;
   padding-bottom: 100px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .flexItem {
