changed font to poppins

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: myFont;
-  src: url("./fonts/ProductSans-Regular.ttf");
+  src: url("./fonts/Poppins-Regular.otf");
 }
 
 * {
