--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -48,6 +48,15 @@ code {
   height: 400px;
 }
 
+.loginCard {
+  max-width: 400px;
+  /* Adjust as needed */
+  margin: 0 auto;
+  /* Center the container */
+  padding: 20px;
+  max-height: 700px;
+}
+
 
 .custom-padding {
   padding-left: 0 !important;
