fixed form control design

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -15,7 +15,21 @@ code {
     monospace;
 }
 
+.light-mode-datepicker {
+  background-color: #E4E3E0;
+  color: #313638;
+  border: 2px solid #F9F6EE;
+  border-radius: 5px;
+  padding: 8px;
+}
 
+.dark-mode-datepicker {
+  background-color: #313638;
+  color: white;
+  border: 2px solid #313638;
+  border-radius: 5px;
+  padding: 8px;
+}
 .formContainer {
   max-width: 500px;
   /* Adjust as needed */
